--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
+    "typescript-eslint": "https://esm.sh/typescript-eslint@^8.55.0",
+    "eslint-plugin-react-refresh": "https://esm.sh/eslint-plugin-react-refresh@^0.5.0",
+    "eslint-plugin-react-hooks": "https://esm.sh/eslint-plugin-react-hooks@^7.0.1",
+    "globals": "https://esm.sh/globals@^17.3.0",
+    "@eslint/js": "https://esm.sh/@eslint/js@^10.0.1"
   }
 }
 </script>
